@@ -1,3 +1,9 @@
+2004-02-23  Chris Schwerdt <muti@afterglo.ws> 1.4.3-cvs-b51
+
+	* Fixed Bug #902918: If magic quotes is enabled, gallery remote
+	  captions (among a few other things) do not get stripped of quote
+	  escapes.
+
 2004-02-23  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.3-cvs-b50
 
 	* Fixed Bug #881690: mod_rewrite couldn't transcribe URLs for albums
